# rsomics-silhouette

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: silhouette.rs
src/: cli.rs  distance.rs  io.rs  lib.rs  silhouette.rs  sum.rs
tests/: compat.rs
tests/golden/: big_n3000_d20_k8.tsv  big_n3000_d20_k8__cosine.samples.hex  big_n3000_d20_k8__euclidean.samples.hex  big_n3000_d20_k8__manhattan.samples.hex  big_n3000_d20_k8__sqeuclidean.samples.hex  expected_samples.tsv  expected_score.tsv  intdedup_X.tsv  intdedup__euclidean.samples.hex  mid_n300_d8_k5.tsv  mid_n300_d8_k5__cosine.samples.hex  mid_n300_d8_k5__euclidean.samples.hex  mid_n300_d8_k5__manhattan.samples.hex  mid_n300_d8_k5__sqeuclidean.samples.hex  overlap_n1500_d20_k6.tsv  overlap_n1500_d20_k6__cosine.samples.hex  overlap_n1500_d20_k6__euclidean.samples.hex  overlap_n1500_d20_k6__manhattan.samples.hex  overlap_n1500_d20_k6__sqeuclidean.samples.hex  overlap_n800_d5_k2.tsv  overlap_n800_d5_k2__cosine.samples.hex  overlap_n800_d5_k2__euclidean.samples.hex  overlap_n800_d5_k2__manhattan.samples.hex  overlap_n800_d5_k2__sqeuclidean.samples.hex  sep_n100_d2_k3.tsv  sep_n100_d2_k3__cityblock.samples.hex  sep_n100_d2_k3__cosine.samples.hex  sep_n100_d2_k3__euclidean.samples.hex  sep_n100_d2_k3__sqeuclidean.samples.hex  sep_n500_d10_k4.tsv  sep_n500_d10_k4__cityblock.samples.hex  sep_n500_d10_k4__cosine.samples.hex  sep_n500_d10_k4__euclidean.samples.hex  sep_n500_d10_k4__sqeuclidean.samples.hex  seplabel_X.tsv  seplabel_labels.txt
