[package]
name = "rsomics-silhouette"
version = "0.1.0"
description = "Silhouette clustering-quality coefficient (silhouette_score + silhouette_samples) — value-exact scikit-learn equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-silhouette"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["silhouette", "clustering", "metrics", "scikit-learn", "validation"]
readme = "README.md"

[[bin]]
name = "rsomics-silhouette"
path = "src/main.rs"

[lib]
name = "rsomics_silhouette"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
fast-float2 = "0.2"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "silhouette"
harness = false
